--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 		<canvas id="canvas" width="400" height="300">
 			Twoja przeglądarka nie obsługuje elementu canvas standardu HTML5.
 		</canvas>
+
+		<script src="script.js"></script>
 	</body>
 </html>
