Add second dice

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 	<head>
-	<title>Rzut pojedyńcza kością</title>
+	<title>Rzut dwiema kośćmi</title>
 	</head>
-	<body onLoad="init();">
+	<body>
 		<canvas id="canvas" width="400" height="300">
 			Twoja przeglądarka nie obsługuje elementu canvas standardu HTML5.
 		</canvas>
+		<br/>
+		<button onClick="throwdice();">Rzuć kośćmi</button>
 
 		<script src="script.js"></script>
 	</body>
