--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
-<html>
+<!DOCTYPE html>
+<html lang="pl">
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Gra w kości</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
-		<canvas id="canvas" width="400" height="300">
-			Twoja przeglądarka nie obsługuje elementu canvas standardu HTML5.
-		</canvas>
-		<br/>
-		<button onClick="throwdice();">Rzuć kośćmi</button>
-		<form name="f">
-			Etap: <input name="stage" value="Pierwszy rzut"/>
-			Punkty: <input name="pv" value=""/>
-			Wynik: <input name="outcome" value=""/>
-		</form>
+	<body class="body">
+		<div class="info" id="info">
+			<h2 class="inst">Instrukcja</h2>
+			<p class="ins">Gracz rzuca dwiema kostkami. Liczy się suma oczek, zatem 1 i 3 daje ten sam wynik, co 2 i 2. Suma oczek dwóch sześciennych kostek przyjmuje wartość od 2 do 12. Jeśli gracz uzyska sumę 7 lub 11 w pierwszym rzucie, wygrywa. Jeśli uzyska sumę 2, 3 lub 12, przegrywa. Każdy inny wynik (4, 5, 6, 8, 9, lub 10) powoduje przejście do dalszej gry. Suma oczek jest zapisywana jako punkty gracza i wykonywany jest kolejny rzut. W kolejnym rzucie suma oczek 7 powoduje przegraną, a suma oczek identyczna z punktami gracza powoduje wygraną. Każda inna suma oczek wymusza kolejny rzut z tymi samymi zasadami.</p>
+			<button class="btn end" id="end">Zakończ</button>
+		</div>
+		<div class="game">
+			<h1 class="title">Crabs</h1>
+			<h2 class="subtitle">Gra w kości</h2>
+				<div class="image" id="image">
+					<img src="dice.png" class="cube" alt="Kości do gry">
+				</div>
+			<canvas id="canvas" class="canavas" width="320" height="120">
+				Twoja przeglądarka nie obsługuje elementu canvas standardu HTML5.
+			</canvas>
+			<br/>
+			<form class="form" id="form" name="f">
+				<div class="inp">Etap: <input class="in" name="stage" value="Pierwszy rzut"/></div>
+				<div class="inp">Punkty z pierwszego rzutu: <input class="in" name="pv" value=""/></div>
+				<div class="inp">Wynik: <input class="in" name="outcome" value=""/></div>
+			</form>
+			<div class="buttons">
+				<button class="btn instruction" id="instruction">Instrukcja</button>
+				<button class="btn startGame" id="startGame" onClick="throwdice();">Rzuć kośćmi</button>
+				<button class="btn start" id="start">Zacznij grę</button>
+			</div>
+		</div>
 
 		<script src="script.js"></script>
 	</body>
